Fix post font-size and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1959,6 +1959,7 @@ footer .footer-below {
 
 	p {
 		margin: 0 0 2em 0;
+		font-size: 17px;
 	}
 
 	h1, h2, h3, h4, h5, h6, a {
